--- a/files/styles/styles.css
+++ b/files/styles/styles.css
@@ -3,19 +3,20 @@
 }
 
 #accountPanel{
-	background-color: navy;
-	height: 100%;
-	margin: 0;
+	background-color: darkcyan;
+	margin-right: 0.5%;
+	padding: 1%;
 	width: 20%;
 }
 
 body {
+	background-color: lightcyan;
   	font-family: 'Arial', sans-serif;
 	text-align: center;
 }
 
 button{
-	background-color: white;
+	background-color: transparent;
 	border: none;
 	cursor: pointer;
 	outline: none;
