--- a/files/css/styles.css
+++ b/files/css/styles.css
@@ -3,10 +3,7 @@
 }
 
 #accountPanel{
-	background-color: darkcyan;
-	margin-right: 0.5%;
 	padding: 1%;
-	width: 20%;
 }
 
 body {
@@ -29,6 +26,36 @@ button{
 	position: absolute;
 	top: 50%;
 	transform: translate(-50%, -50%);
+}
+
+.context-menu{
+	background-color: darkcyan;
+	color: ghostwhite;
+	margin-right: 0.5%;
+	padding-bottom: 1%;
+	padding-top: 1%;
+	width: 20%;
+}
+
+.context-menu-item{
+	padding-bottom: 2%;
+	padding-left: 5%;
+	padding-top: 2%;
+	height: 20px;
+}
+
+.context-menu-item:hover{
+	background-color: wheat;
+	cursor: pointer;
+}
+
+#contextMenu{
+  	--mouse-x: 0px;
+  	--mouse-y: 0px;
+	position: fixed;
+	text-align: left;
+	transform: translateX(min(var(--mouse-x), calc(100vw - 100%))) translateY(min(var(--mouse-y), calc(100vh - 100%)));
+	z-index: 1;
 }
 
 .control:active {
